# ChangeLog for net-im/leechcraft-azoth
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.20 2012/05/23 19:02:17 maksbotan Exp $

  23 May 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-9999.ebuild:
  Add app-text/hunspell DEPEND to leechcraft-azoth-9999

*leechcraft-azoth-0.5.65 (22 Apr 2012)

  22 Apr 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.5.65.ebuild:
  Bump net-im/leechcraft-azoth to 0.5.65, thanks to 0xd34df00d

  07 Apr 2012; Markus Meier <maekke@gentoo.org> leechcraft-azoth-0.4.99.ebuild:
  x86 stable, bug #400605

*leechcraft-azoth-0.5.60 (20 Mar 2012)

  20 Mar 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.5.60.ebuild:
  Bump LeechCraft to 0.5.60, thank to 0xd34df00d

  04 Mar 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-9999.ebuild, metadata.xml:
  Add depends for telepathy and keeso plugin to 9999. Thanks to 0xd34df00d

  09 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-azoth-0.5.0.ebuild, leechcraft-azoth-9999.ebuild:
  Added missing (R)DEPEND to 0.5.0 and 9999

*leechcraft-azoth-0.5.0 (09 Feb 2012)

  09 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.5.0.ebuild, -leechcraft-azoth-0.4.96-r1.ebuild,
  -leechcraft-azoth-0.4.97.ebuild:
  Bumped LeechCraft to 0.5.0, removed 0.4.96-r1 and 0.4.97

  04 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  leechcraft-azoth-0.4.99.ebuild:
  Stable for amd64, wrt bug #400605

  02 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org> Manifest:
  Big leechcraft bump to 0.4.99, thanks to 0xd34df00d

*leechcraft-azoth-0.4.99 (02 Feb 2012)

  02 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-azoth-0.4.99.ebuild:
  Bump app-editors/leechcraft-popishu to 0.4.99, thanks to 0xd34df00d

  24 Jan 2012; Johannes Huber <johu@gentoo.org> leechcraft-azoth-9999.ebuild: