@@ -5,21 +5,23 @@ DIST leechcraft-0.4.99.tar.xz 4601736 RMD160 343e64a430cd55f401989b1c89a74a9c2dd
 DIST leechcraft-0.5.0.tar.xz 4691312 RMD160 4ea82848fe59fcd1159fa835dfb94ff81775f964 SHA1 0d01a9b38fd1ce136d678803a1270538fb8e3cc4 SHA256 ef0802442b803079dc491f73ff0294cb8560d86fbea44c8e57b3d54fdf3b88fa
 DIST leechcraft-0.5.60.tar.xz 4743936 RMD160 e845b9f9e7b0bdebd2c99822ffd3e15c019f6051 SHA1 2941679520e6871372eac31d1e683615a8dd64e6 SHA256 477d8fc54167798337e64324575d12cf1cace4d6502bb14d892edd2ed4b5a7f4
 DIST leechcraft-0.5.65.tar.xz 4817008 RMD160 0ad33f984b9beade23ca81aadeb64f8a23e3400c SHA1 77cedc3ddadefa02e6be7ff50210e53e045880be SHA256 2fdb3d17fbcaa58793cf1c0046851d9e3d6ede25bd57562aae572c9f64e1b38a
+DIST leechcraft-0.5.70.tar.xz 4793076 RMD160 0b6d5495dc84c26f2fd9b0d8bd5a97eec9c4bf2b SHA1 defa9d92338a3047daffda0dc7601c3d431db7c2 SHA256 f9b6ff57005a4883042256b699451382ae5d3325e43f44097fbde3fdd77b859f
 EBUILD leechcraft-azoth-0.4.99.ebuild 2454 RMD160 9a5c146ed6fdf1c0588004f9208f1b05e61e51e5 SHA1 026af5ea78ef9ca03d6b70dba93505d87755acc4 SHA256 c869919ffaf174a887546ba65354d187ffc92c7192dc85cfe0bfbac9084ed486
 EBUILD leechcraft-azoth-0.5.0.ebuild 2498 RMD160 94c42974e4fa5452fce35fe7f98f396176ef79c6 SHA1 d369770f0e2b8adb3efbfffc6a325c454b6b11ce SHA256 fd62e98d08e75a6365ac85cca1f868dd89ed49c3f8e3265188cf4e68beb371a6
 EBUILD leechcraft-azoth-0.5.60.ebuild 2824 RMD160 01f87c068543a78657ae74526284b272f1e6e89a SHA1 9507adf9b07c4fa5812659301d88f4ac2a373a12 SHA256 919c1ffcfed74eaebe369444f669bc1c401eb1d266edd1140207ba7da04e18d3
 EBUILD leechcraft-azoth-0.5.65.ebuild 2824 RMD160 b30820468ccce0679433620c5b3151594694ef7d SHA1 a8108e78e3662f3f884fe582f18d8a1fbabdbbb5 SHA256 5dd86d0c9f8cc15df1766a67181638ba01a15f31749bea4b2c04f4f70bbc6311
-EBUILD leechcraft-azoth-9999.ebuild 2844 RMD160 d5dafb71317c048ecc8473da03069a4ca27563b5 SHA1 2add7d3483a3c172073a116e2e57e6a96ade63b5 SHA256 1ed8a8a6fcacc143d35abce619f56955f418a706004f1f9f7a557577b3566d33
-MISC ChangeLog 3730 RMD160 ea785c6b23052041d869abf1f32e9747c8b93d32 SHA1 6cf0686c3622ab4b4498bedc70ebdc4a9f39a5f6 SHA256 3a189487bbb74107acb846c5522acfeb13d8968bade95f9673882a7fc0413a41
-MISC metadata.xml 2211 RMD160 d36b567109df2da8992f908058a4fa680d33c356 SHA1 f022e6324dcf6ebc8c8ae6f1233635335f148f33 SHA256 dff16636b43ea6650a2248423216cc2a1c11db7f27cfe5999fb894ddb929b4a2
+EBUILD leechcraft-azoth-0.5.70.ebuild 2946 RMD160 3c22ff3d26e39a514acfc84199d198a433b92539 SHA1 20af196233449515181792f89767bbcf9398a232 SHA256 927e17aa5d52f4cbd0f1d40ce41033b698a38b107f0fca204daf8f16777b0b58
+EBUILD leechcraft-azoth-9999.ebuild 2931 RMD160 2b919521b942d080b4180e8df4f0ece720df84a8 SHA1 9d857e8d39751f9b59d45874b13d454bcd652a33 SHA256 4d964e13178f2a33de971de90e70dc1dd7cf0246408f0fbd52c1aa65c6007a5b
+MISC ChangeLog 3946 RMD160 2543ed17f182d6a13ba9c777078d679e4bb8b41d SHA1 3f33fc67f078e8201186ff60a6d131e4ca5aa0e2 SHA256 0eddd2d3e55f83f5459abfff56cba2b49ad8ef18b2bc186ff34ea54d1a4093d5
+MISC metadata.xml 2257 RMD160 15588ad7b1c738b926ebfc34e19051b4a52f7d5f SHA1 f7ad692b741f5cd624c0a6dbdc6b721a87892b51 SHA256 f728351a63dcfbd82b10ed533e3fad0d90a4a6502723043ee2c8685381868e9e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPvTRYAAoJEAmJmMX429rekEIIAKFqmAEN6z67DUNuDPsVtgYY
-pGO5KoCBWrAiStMJM99UHaqWcspSwnoCdIzIl2rYTmXF701O+3OQV+32QTTiAnsc
-30QPQr0HDCXk3+oH7rsgJnnEcX3ltszeobWZEfNz8E63CQgm0dWL4/Z5wzbAcODD
-sajKH9yCI5sW53ZgMSxmNYoRxLrJo/WpbTh+s4+wAaHIa/n0iwJAZX1iFwWFYheS
-3OqHdux5m6E9qL38ha5WC+Kuqbp6CnGXOTnMrmVvvPIRwbqWWottZz/0eHpodhbD
-/R69iPZViJCjR0IgosHPJCLnoHWsrMOETI2EKcz4LMrwUjToVgt9qgVoDypJwXs=
-=Dv52
+iQEcBAEBAgAGBQJPyE9xAAoJEAmJmMX429rewvEH/iRqSMOWq8r4CS+1q0ehRh1j
+CfDHLXcfrTn2USa5CWp7UVWqLMGkZxqj44rmh/yHn2I2Mk8cA42fKorGwMy3lT30
+9Txp3OrINqmOBF/c0wZWbBgLOysm2hl/r1QiyrPlkibF2ughSMk8JcCD/rcBbaLP
+sjuoM36zmTyKYKnQT62vJTl8c5AiEGQlEEwEO33LqFCqaW6DqtnqaQVHQ/LUWPzZ
+oJZ01pXacYtQlnA2T5+dn+Eu72UzimTEHMdHqi/FC8Pveb14XTwAE9eLt0tvjekZ
+95DM8uXzym+QRIMuRF9Mlq9p3ot9xLZj8j5xU8I2jkLkbdk8924bicbg+PiGY0Q=
+=f8y9
 -----END PGP SIGNATURE-----
