@@ -1,6 +1,12 @@
 # ChangeLog for net-im/leechcraft-azoth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.20 2012/05/23 19:02:17 maksbotan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/leechcraft-azoth/ChangeLog,v 1.21 2012/06/01 05:12:50 maksbotan Exp $
+
+*leechcraft-azoth-0.5.70 (01 Jun 2012)
+
+  01 Jun 2012; Maxim Koltsov <maksbotan@gentoo.org>
+  +leechcraft-azoth-0.5.70.ebuild, leechcraft-azoth-9999.ebuild, metadata.xml:
+  Bump LeechCraft to 0.5.70 "Hessian Blade"
 
   23 May 2012; Maxim Koltsov <maksbotan@gentoo.org>
   leechcraft-azoth-9999.ebuild:
